--- a/src/main/resources/templates/my/coupon.html
+++ b/src/main/resources/templates/my/coupon.html
@@ -72,7 +72,7 @@
                 <p class="page" th:if="${myCoupons.total > 0}">
 
                     <a class="prev"
-                       th:href="@{/my/coupon(pg=${status=${status}, myCoupons.start-1})}"
+                       th:href="@{/my/coupon(status=${status}, pg=${myCoupons.start-1})}"
                        th:if="${myCoupons.prev}">
                         이전
                     </a>
