--- a/src/main/resources/templates/fragments/policy/policy_layout.html
+++ b/src/main/resources/templates/fragments/policy/policy_layout.html
@@ -46,11 +46,11 @@
                     <li><a th:href="@{/product/list(prodCate1=1, prodCate2=1, type='discount')}" th:class="${pageRequestDTO.type eq 'discount' ? 'on' : 'off'}">할인상품</a></li>
                 </ul>
                 <ul>
-                    <li><a href="#">쿠폰존</a></li>
-                    <li><a href="#">사용후기</a></li>
-                    <li><a href="#">개인결제</a></li>
-                    <li><a href="#">고객센터</a></li>
-                    <li><a href="#">FAQ</a></li>
+                    <li><a th:href="@{/my/coupon}">쿠폰존</a></li>
+                    <li><a th:href="@{/my/review}">사용후기</a></li>
+                    <li><a th:href="@{/my/order}">개인결제</a></li>
+                    <li><a th:href="@{/cs}">고객센터</a></li>
+                    <li><a th:href="@{/cs/faq/list}">FAQ</a></li>
                 </ul>
             </div>
         </div>
