--- a/src/main/resources/templates/my/point.html
+++ b/src/main/resources/templates/my/point.html
@@ -2,13 +2,60 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{/fragments/my/my_layout.html}">
+<head>
+    <script>
+        $(function() {
+            $('.btnConfirm').click(function() {
+
+                const type1 = $('input[name=type1]').val();
+                const type2 = $('input[name=type2]').val();
+                const path  = $('input[name=path]').val();
+
+                console.log('type1 : ' + type1);
+                console.log('type2 : ' + type2);
+                console.log('path : ' + path);
+
+                const date1 = new Date(type1);
+                const date2 = new Date(type2);
+
+                console.log('date1 : ' + date1);
+                console.log('date2 : ' + date2);
+                console.log('date2.2 : ' + date2);
+
+                const today = new Date();
+                today.setHours(0, 0, 0, 0);
+                const whatTime = (date2 - date1)/(1000 * 60 * 60 * 24);
+
+                console.log('today : ' + today);
+                console.log('whatTime : ' + whatTime);
+
+                if(type1 === '' || type2 === '') {
+                    alert('날짜를 지정해주세요.');
+                    return false;
+
+                }else if(whatTime > 365) {
+                    alert('검색 기간은 1년 이내만 가능합니다.');
+
+                }else if(today < date2 + 1000*60*60*15) {
+                    alert('현재 날짜 이후는 조회 할 수 없습니다.');
+
+                }else if(date1 > date2) {
+                    alert('검색 기간을 시간순으로 입력해주세요.');
+
+                }else if(type1 != 0 && type2 != 0) {
+                    location.href = path + '/my/point?type1=' + type1 + '&type2=' + type2;
+
+                }
+            });
+        });
+    </script>
+</head>
     <div class="point" layout:fragment="content">
         <ul th:replace="~{/fragments/my/my_aside.html}">
             <!--
             어사이드 영역
             -->
         </ul>
-
         <section>
             <a href="#"><img th:src="@{/images/my/my_banner2.png}" alt="패션, 타운 하나로 끝" class="banner"></a>
             <article>
@@ -17,26 +64,41 @@
                 <div class="byDate">
                     <span class="tit">기간별조회</span>
                     <ul class="date_3ea">
-                        <li><a th:href="@{/my/point?type1=day&type2=1}"><em>1</em>주일</a></li>
-                        <li><a th:href="@{/my/point?type1=day&type2=7}"><em>15</em>일</a></li>
-                        <li><a th:href="@{/my/point?type1=day&type2=30}" class="on"><em>1</em>개월</a></li>
+                        <li><a th:href="@{/my/point?type1=day&type2=7}" th:class="${(type1=='day' and type2=='7') ? 'on' : ''}"><em>1</em>주일</a></li>
+                        <li><a th:href="@{/my/point?type1=day&type2=15}" th:class="${(type1=='day' and type2=='15') ? 'on' : ''}"><em>15</em>일</a></li>
+                        <li><a th:href="@{/my/point?type1=day&type2=30}" th:class="${(type1=='day' and type2=='30') ? 'on' : ''}"><em>1</em>개월</a></li>
                     </ul>
                     <ul class="date_5ea">
                         <li>
-                            <a th:href="@{#}">
-                                <em>10</em>월
+                            <a th:href="@{/my/point?type1=month&type2=23-09}" th:class="${(type1=='month' and type2=='23-09') ? 'on' : ''}">
+                                <em>9</em>월
+                            </a>
+                        </li>
+                        <li>
+                            <a th:href="@{/my/point?type1=month&type2=23-08}" th:class="${(type1=='month' and type2=='23-08') ? 'on' : ''}">
+                                <em>8</em>월
+                            </a>
+                        </li>
+                        <li>
+                            <a th:href="@{/my/point?type1=month&type2=23-07}" th:class="${(type1=='month' and type2=='23-07') ? 'on' : ''}">
+                                <em>7</em>월
+
+                            </a>
+                        </li>
+                        <li>
+                            <a th:href="@{/my/point?type1=month&type2=23-06}" th:class="${(type1=='month' and type2=='23-06') ? 'on' : ''}">
+                                <em>6</em>월
+                            </a>
+                        </li>
+                        <li>
+                            <a th:href="@{/my/point?type1=month&type2=23-05}" th:class="${(type1=='month' and type2=='23-05') ? 'on' : ''}">
+                                <em>5</em>월
                             </a>
                         </li>
                     </ul>
-
-
-
-                    <!--<li><a th:href="@{/my/point}"><em>10</em>월</a></li>
-                    <li><a th:href="@{/my/point}"><em>9</em>월</a></li>
-                    <li><a th:href="@{/my/point}"><em>8</em>월</a></li>
-                    <li><a th:href="@{/my/point}"><em>7</em>월</a></li>-->
                     <p>
-                        <input type="date" name="begin"><span>~</span><input type="date" name="end">
+                        <input type="date" name="type1" th:value="${type1}"><span>~</span><input type="date" name="type2" th:value="${type2}">
+                        <input type="hidden" name="path" th:value="${path}">
                     </p>
                     <button class="btnConfirm">조회하기</button>
                 </div>
@@ -65,28 +127,27 @@
                     포인트 내역이 없습니다.
                 </div>
 
-
-
                 <p class="page" th:if="${myPoint.total > 0}">
 
                     <a class="prev"
-                       th:href="@{/my/point(pg=${myPoint.start-1})}"
+                       th:href="@{/my/point(type1=${type1}, type2=${type2}, pg=${myPoint.start-1})}"
                        th:if="${myPoint.prev}">
                         이전
                     </a>
 
                     <a th:each="num:${#numbers.sequence(myPoint.start, myPoint.end)}"
                        th:classappend="${myPoint.pg eq num ? 'num on' : 'num'}"
-                       th:href="@{/my/point(pg=${num})}">
+                       th:href="@{/my/point(type1=${type1}, type2=${type2}, pg=${num})}">
                         [[${num}]]
                     </a>
 
                     <a class="next"
-                       th:href="@{/my/point(pg=${myPoint.end+1})}"
+                       th:href="@{/my/point(type1=${type1}, type2=${type2}, pg=${myPoint.end+1})}"
                        th:if="${myPoint.next}">
                         다음
                     </a>
                 </p>
+
             </article>
         </section>
     </div>
