--- a/src/main/resources/templates/admin/product/register.html
+++ b/src/main/resources/templates/admin/product/register.html
@@ -79,7 +79,7 @@
                     <tr>
                         <td>포인트</td>
                         <td>
-                            <span>0을 입력하면 포인트 없음</span>
+                            <span>0을 입력하면 포인트 없음 (실수로 입력될시 자동으로 반올림)</span>
                             <input type="text" name="point" onlyNumber/>점
                         </td>
                     </tr>
