--- a/src/main/resources/templates/fragments/admin/admin_aside.html
+++ b/src/main/resources/templates/fragments/admin/admin_aside.html
@@ -8,7 +8,7 @@
                     <a th:href="@{/admin/config/info}"><i class="fa fa-cogs" aria-hidden="true"></i>환경설정</a>
                     <ol>
                         <li><a th:href="@{/admin/config/info}">기본환경정보</a></li>
-                        <li><a th:href="@{/admin/config/info}">배너관리</a></li>
+                        <li><a th:href="@{/admin/config/banner}">배너관리</a></li>
                     </ol>
                 </li>
                 <li>
