--- a/src/main/resources/templates/admin/product/register.html
+++ b/src/main/resources/templates/admin/product/register.html
@@ -80,7 +80,7 @@
                         <td>포인트</td>
                         <td>
                             <span>0을 입력하면 포인트 없음</span>
-                            <input type="text" name="point" onlyNumber/>점
+                            <input type="text" name="point" onlyNumber value="1"/>점
                         </td>
                     </tr>
                     <tr>
