--- a/src/main/resources/templates/my/home.html
+++ b/src/main/resources/templates/my/home.html
@@ -22,7 +22,7 @@
                         <th>확인/신청</th>
                     </tr>
                     <tr th:each="list, orderStat:${myOrder.ordList}" th:if="${orderStat.index} lt 3">
-                        <td class="date">2022-12-13</td>
+                        <td class="date" th:text="${list.yyyyMMdd2}">2022-12-13</td>
                         <td>
                             <a th:href="@{/product/view(prodCate1=${list.prodCate1}, prodCate2=${list.prodCate2}, prodNo=${list.prodNo}}" class="thumb">
                                 <img th:src="@{/thumbs/}+${list.prodCate1}+'/'+${list.prodCate2}+'/'+${list.thumb1}" alt="">
