--- a/src/main/resources/templates/my/home.html
+++ b/src/main/resources/templates/my/home.html
@@ -137,11 +137,11 @@
                 <div>
                     <div class="address">
                         <span>기본 배송지설정</span>
-                        <a href="#" class="setting">변경</a>
+                        <a th:href="@{/my/info}" class="setting">변경</a>
                     </div>
                     <div class="email">
                         <span>email 설정</span>
-                        <a href="#" class="setting">변경</a>
+                        <a th:href="@{/my/info}" class="setting">변경</a>
                         <p>
                             <span>abc123@gmail.com</span><br/>
                             (최종수정일 <span>2021-12-10</span>)
@@ -149,7 +149,7 @@
                     </div>
                     <div class="hp">
                         <span>휴대폰 설정</span>
-                        <a href="#" class="setting">변경</a>
+                        <a th:href="@{/my/info}" class="setting">변경</a>
                         <p>
                             <span>abc123@gmail.com</span><br/>
                             (최종수정일 <span>2021-12-10</span>)
